# python_hon_usbhid

./: README.md  hid_devices.py  hon_hidusb.py  main.py  pyproject.toml
doc/autodoc/: conf.py  index.rst  make.bat
doc/doxygen/: Doxyfile  doxygen_filter.py
src/: hon_hidusb.py  main.py
